Fix Mobile Nav Button Wrap

--- a/css/style.css
+++ b/css/style.css
@@ -391,9 +391,8 @@ img {
     right: 0;
     width: 100%;
     height: 100%;
-    padding: 0 15px;
+    padding: 0 0px;
     background-color: var(--color-gray-white);
-    overflow-y: scroll;
     z-index: -1;
     opacity: 0;
     visibility: hidden;
@@ -411,6 +410,7 @@ img {
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
   }
